@@ -1,3 +1,6 @@
+2016-11-22  SilverNexus
+	* search.c: Factor out code to search for excluded directories.
+
 2016-11-21  SilverNexus
 	* search.c: Refactor io.h-based directory traversal to handle the way findfirst/next function.
 
